--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<h1>kitty</h1>
-
-<p style="color: red; font-size: 50px; font-family: Avial Black;"> I create to solve problems </p>
+<h1 style="color: blue;font-size: 50px;text-align: center;"> kitty</h1> 
+<p style="color: red; font-size: 30px; font-family: Arial Black;text-align: center;"> I create to solve problems </p>
 <img src="https://media.giphy.com/media/BfFQeCJSNJcM8/giphy.gif">
