--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
-<h1 style="color: blue;font-size: 50px;text-align: center;"> kitty</h1> 
-<p style="color: red; font-size: 30px; font-family: Arial Black;text-align: center;"> I create to solve problems </p>
-<img src="https://media.giphy.com/media/BfFQeCJSNJcM8/giphy.gif">
+<h1 style="color: blue;font-size: 50px;text-align: left;line-height: 1.0em;"> Kitty Su</h1> 
+<p style="color: red; font-size: 15px; font-family:Arial Black;text-align: left;"> I create to solve problems </p>
+<img style=" width: 500px; float: right;" src="./portfolio/misconduct.png">
+
+<p><a href=”https://www.behance.net/ysu22786” target=”_blank”>Behance</a></p>
