--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1 style="color: blue;font-size: 50px;text-align: left;line-height: 1.0em;"> Kitty Su</h1> 
 <p style="color: red; font-size: 15px; font-family:Arial Black;text-align: left;"> I create to solve problems </p>
-<img style=" width: 500px; float: right;" src="./portfolio/misconduct.png">
+<img style=" width: 500px; float: right;" src="./misconduct.png">
 <p><a href=”https://www.behance.net/ysu22786” target=”_blank”>Behance</a></p>
