--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <h1 style="color: blue;font-size: 50px;text-align: left;line-height: 1.0em;"> Kitty Su</h1> 
 <p style="color: red; font-size: 15px; font-family:Arial Black;text-align: left;"> I create to solve problems </p>
-<img style=" width: 500px; float: right;" src="./misconduct.png">
-<img style=" width: 500px; float: right;" src="./disc1-01.png">
-<img style=" width: 500px; float: right;" src="./typo poster final -01.png">
+<p> <em><a href=https://www.behance.net/ysu22786 ”target=”
+	_blank”>Behance</em></a></p>
+<p> <em><a href=https://github.com/yungchuansu ”target=”
+	_blank”>Github</em></a></p>
+<p> <em><a href=https://www.linkedin.com/in/yungcsu/ ”target=”
+	_blank”>Linkedin</em></a></p>
 
-<p><a href=”https://www.behance.net/ysu22786” target=”_blank”>Behance</a></p>
+<div style=" text-align: right;"><img style="width: 800px " src="./misconduct.png"><br></div>
+<div style=" text-align: right;"><img style="width: 800px " src="./disc1-01.png"><br></div>
+<div style=" text-align: right;"><img style="width: 800px " src="./typo poster final -01.png"></div>
+
+
